--- a/index.html
+++ b/index.html
@@ -1,147 +1,59 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WITRAGE PRODUCTION</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Montserrat', sans-serif;
-    }
-    body {
-      background-color: #0f0f0f;
-      color: #f1f1f1;
-      line-height: 1.6;
-    }
-    header {
-      text-align: center;
-      padding: 120px 20px 80px;
-      background: url('https://sun9-38.userapi.com/impg/abcXYZ.../your-vk-background.jpg?size=1280x720&quality=96&sign=xxx') center/cover no-repeat;
-    }
-    header h1 {
-      font-size: 3rem;
-      font-weight: 800;
-      margin-bottom: 10px;
-      text-shadow: 2px 2px 8px #000;
-    }
-    header p {
-      font-size: 1.2rem;
-      color: #f1f1f1;
-      text-shadow: 1px 1px 6px #000;
-    }
-    .section {
-      padding: 60px 20px;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-    .section h2 {
-      font-size: 2rem;
-      font-weight: 600;
-      margin-bottom: 30px;
-      text-align: center;
-    }
-    .services-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-    }
-    .service-card {
-      background: #1f1f1f;
-      border-radius: 12px;
-      padding: 20px;
-      text-align: center;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-    .service-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(225, 29, 72, 0.3);
-    }
-    .service-card h3 {
-      font-size: 1.4rem;
-      margin-bottom: 10px;
-    }
-    .service-card p {
-      color: #9ca3af;
-      margin-bottom: 15px;
-    }
-    .btn {
-      display: inline-block;
-      background-color: #e11d48;
-      color: #fff;
-      padding: 12px 24px;
-      border-radius: 8px;
-      font-weight: 600;
-      text-decoration: none;
-      transition: background-color 0.3s ease;
-    }
-    .btn:hover {
-      background-color: #be123c;
-    }
-    .vk-player {
-      margin: 50px auto;
-      text-align: center;
-    }
-    footer {
-      text-align: center;
-      padding: 30px 20px;
-      font-size: 0.9rem;
-      color: #9ca3af;
-      background: #0f0f0f;
-      border-top: 1px solid #1f1f1f;
-    }
-  </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WITRAGE PRODUCTION</title>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header>
-    <h1>WITRAGE PRODUCTION</h1>
-    <p>Профессиональное производство битов и аранжировок</p>
-  </header>
+    <div id="particles-js"></div>
+    <header class="header">
+        <h1>WITRAGE PRODUCTION</h1>
+        <p>будь первым кто возьмет в работу</p>
+        <div class="buttons">
+            <a href="https://t.me/DZZHIL" target="_blank" class="btn telegram"><i class="fab fa-telegram-plane"></i> Telegram</a>
+            <a href="https://vk.com/witrage_beats" target="_blank" class="btn vk"><i class="fab fa-vk"></i> VK</a>
+        </div>
+    </header>
 
-  <section class="section">
-    <h2>🎹 Наши услуги</h2>
-    <div class="services-grid">
-      <div class="service-card">
-        <h3>Базовая аренда</h3>
-        <p>Лицензия для некоммерческого использования</p>
-        <a href="https://vk.com/market/product/bazovaya-arenda-206767368-5907648" class="btn">Подробнее</a>
-        <br><br>
-        <a href="https://t.me/DZZHIL" class="btn">Купить в Telegram</a>
-      </div>
-      <div class="service-card">
-        <h3>Премиум аренда</h3>
-        <p>Расширенная лицензия для стриминга и монетизации</p>
-        <a href="https://vk.com/market/product/premium-arenda-206767368-5907647" class="btn">Подробнее</a>
-        <br><br>
-        <a href="https://t.me/DZZHIL" class="btn">Купить в Telegram</a>
-      </div>
-      <div class="service-card">
-        <h3>Профессиональная аренда</h3>
-        <p>Все права на использование бита в коммерческих целях</p>
-        <a href="https://vk.com/market/product/professionalnaya-arenda-206767368-5907646" class="btn">Подробнее</a>
-        <br><br>
-        <a href="https://t.me/DZZHIL" class="btn">Купить в Telegram</a>
-      </div>
-      <div class="service-card">
-        <h3>Полные права</h3>
-        <p>Эксклюзивные права на бит без ограничений</p>
-        <a href="https://vk.com/market/product/polnye-prava-206767368-5907645" class="btn">Подробнее</a>
-        <br><br>
-        <a href="https://t.me/DZZHIL" class="btn">Купить в Telegram</a>
-      </div>
-    </div>
-  </section>
+    <section class="services">
+        <h2>уСЛУГИ</h2>
+        <div class="service-cards">
+            <div class="card">
+                <h3>Премиум аренда</h3>
+                <p>Лицензия для коммерческого использования с большим пакетом прав.</p>
+                <a href="https://vk.com/market/product/premium-arenda-206767368-5907647" class="buy-btn">купить</a>
+            </div>
+            <div class="card">
+                <h3>Профессиональная аренда</h3>
+                <p>Подходит для профессиональной работы на всех платформах.</p>
+                <a href="https://vk.com/market/product/professionalnaya-arenda-206767368-5907646" class="buy-btn">купить</a>
+            </div>
+            <div class="card">
+                <h3>Полные права</h3>
+                <p>Эксклюзивные права на использование трека без ограничений.</p>
+                <a href="https://vk.com/market/product/polnye-prava-206767368-5907645" class="buy-btn">купить</a>
+            </div>
+        </div>
+    </section>
 
-  <section class="section vk-player">
-    <h2>🎧 Слушай каталог битов</h2>
-    <iframe src="https://vk.com/widget_own_audio_playlist.php?act=show&owner_id=-206767368&playlist_id=2" width="100%" height="450" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  </section>
+    <section class="catalog">
+        <h2>Каталог битов</h2>
+        <iframe src="https://vk.com/wall-206767368_4" frameborder="0" allowfullscreen></iframe>
+    </section>
 
-  <footer>
-    &copy; 2025 WITRAGE PRODUCTION | <a href="https://vk.com/witrage_beats" style="color:#e11d48; text-decoration:none;">VK</a>
-  </footer>
+    <section class="contact">
+        <h2>Вопросы?</h2>
+        <p>Напиши нам на <a href="mailto:WITRAGE.prod@gmail.com">WITRAGE.prod@gmail.com</a></p>
+    </section>
+
+    <footer>
+        <p>© 2025 WITRAGE PRODUCTION | <a href="https://vk.com/witrage_beats" target="_blank">VK</a> | <a href="https://www.youtube.com/@WITRAGE" target="_blank">YouTube</a></p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script src="particles-config.js"></script>
 </body>
 </html>
