--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="particles-js"></div>
     <header class="header">
         <h1>WITRAGE PRODUCTION</h1>
-        <p>будь первым кто возьмет в работу</p>
+        <p>БУДЬ ПЕРВЫМ КТО ВОЗЬМЕТ В РАБОТУ</p>
         <div class="buttons">
             <a href="https://t.me/DZZHIL" target="_blank" class="btn telegram"><i class="fab fa-telegram-plane"></i> Telegram</a>
             <a href="https://vk.com/witrage_beats" target="_blank" class="btn vk"><i class="fab fa-vk"></i> VK</a>
@@ -19,7 +19,7 @@
     </header>
 
     <section class="services">
-        <h2>уСЛУГИ</h2>
+        <h2>УСЛУГИ</h2>
         <div class="service-cards">
             <div class="card">
                 <h3>Премиум аренда</h3>
@@ -41,12 +41,17 @@
 
     <section class="catalog">
         <h2>Каталог битов</h2>
-        <iframe src="https://vk.com/wall-206767368_4" frameborder="0" allowfullscreen></iframe>
-    </section>
+        <div id="vk_playlist_-206767368_2"></div>
+<script type="text/javascript" src="https://vk.com/js/api/openapi.js?173"></script>
+<script type="text/javascript">
+  (function() {
+    VK.Widgets.Playlist("vk_playlist_-206767368_2", -206767368, 2,'ca3f227bc60a643ebc');
+  }());
+</script>
 
     <section class="contact">
         <h2>Вопросы?</h2>
-        <p>Напиши нам на <a href="mailto:WITRAGE.prod@gmail.com">WITRAGE.prod@gmail.com</a></p>
+        <p>Напиши мне на <a href="mailto:WITRAGE.prod@gmail.com">WITRAGE.prod@gmail.com</a></p>
     </section>
 
     <footer>
