--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>WITRAGE PRODUCTION</h1>
         <p>БУДЬ ПЕРВЫМ КТО ВОЗЬМЕТ В РАБОТУ</p>
         <div class="buttons">
-            <a href="https://t.me/DZZHIL" target="_blank" class="btn telegram"><i class="fab fa-telegram-plane"></i> Telegram</a>
+            <a href="https://t.me/DZZHIL" target="_blank" class="btn telegram"><i class="fab fa-telegram-plane"></i> TG</a>
             <a href="https://vk.com/witrage_beats" target="_blank" class="btn vk"><i class="fab fa-vk"></i> VK</a>
         </div>
     </header>
