--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <h2>УСЛУГИ</h2>
         <div class="service-cards">
             <div class="card">
-                <h3>Премиум аренда 1000р</h3>
+                <h3>Премиум аренда</h3>
+                    <h3>1000 Рр</h3>
                 <p>Лицензия для коммерческого использования с большим пакетом прав.</p>
                 <a href="https://vk.com/market/product/premium-arenda-206767368-5907647" class="buy-btn">подробнее</a>
             </div>
