--- a/index.html
+++ b/index.html
@@ -23,17 +23,19 @@
         <div class="service-cards">
             <div class="card">
                 <h3>Премиум аренда</h3>
-                    <h3>1000 Рр</h3>
+                    <h3>1000 Р</h3>
                 <p>Лицензия для коммерческого использования с большим пакетом прав.</p>
                 <a href="https://vk.com/market/product/premium-arenda-206767368-5907647" class="buy-btn">подробнее</a>
             </div>
             <div class="card">
-                <h3>Профессиональная аренда 2000р</h3>
+                <h3>Профессиональная аренда </h3>
+                  <h3>2000 Р</h3>
                 <p>Подходит для профессиональной работы на всех платформах.</p>
                 <a href="https://vk.com/market/product/professionalnaya-arenda-206767368-5907646" class="buy-btn">подробнее</a>
             </div>
             <div class="card">
-                <h3>Полные права 7000р</h3>
+                <h3>Полные права </h3>
+                      <h3>7000 Р</h3>
                 <p>Эксклюзивные права на использование трека без ограничений.</p>
                 <a href="https://vk.com/market/product/polnye-prava-206767368-5907645" class="buy-btn">подробнее</a>
             </div>
